Closed Bug 1372887 Opened 7 years ago Closed 7 years ago

Fetch Response type should not change if the body is consumed twice

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: baku, Assigned: baku)

Details

Attachments

(1 file)

fetch('/').then(r => { r.blob().then(b => { console.log(b); }); r.text(); })

should print a blob, and not a string.
Summary: Fetch Response type should not changed. → Fetch Response type should not change if the body is consumed twice
Attached patch fetch_1.patchSplinter Review
Attachment #8877575 - Flags: review?(bugs)
Comment on attachment 8877575 [details] [diff] [review]
fetch_1.patch

Wow.
Attachment #8877575 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/32b282335ab9
Fetch Response type should not change if the body is consumed twice, r=bkelly
https://hg.mozilla.org/mozilla-central/rev/32b282335ab9
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: