Bug 1372887 - Fetch Response type should not change if the body is consumed twice, r=bkelly